--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ BASE_URL=
 SESSION_SECRET=change-me-to-a-long-random-string
 ADMIN_USERNAME=your-admin-username
 ADMIN_PASSWORD=your-admin-password
+# Optional: set absolute paths for production persistent storage.
+# DATA_DIR=
+# UPLOAD_DIR=
