Creating video capability

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ BASE_URL=
 SESSION_SECRET=change-me-to-a-long-random-string
 ADMIN_USERNAME=your-admin-username
 ADMIN_PASSWORD=your-admin-password
+MAX_VIDEOS_PER_PERSON=10
+MAX_TOTAL_VIDEOS=400
+MAX_VIDEO_SIZE_MB=1200
 # Optional: set absolute paths for production persistent storage.
 # DATA_DIR=
 # UPLOAD_DIR=
